@@ -11,7 +11,7 @@ import java.time.LocalDate;
 import java.util.List;
 
 public class AppointmentExistenceValidator implements ConstraintValidator<AppointmentExistence, Object> {
-    private String doctorIdFieldName;
+    private String userIdFieldName;
     private String dateFieldName;
     private String startTimeFieldName;
 
@@ -20,7 +20,7 @@ public class AppointmentExistenceValidator implements ConstraintValidator<Appoin
 
     @Override
     public void initialize(AppointmentExistence constraintAnnotation) {
-        this.doctorIdFieldName = constraintAnnotation.doctorId();
+        this.userIdFieldName = constraintAnnotation.userId();
         this.dateFieldName = constraintAnnotation.date();
         this.startTimeFieldName = constraintAnnotation.startTime();
     }
@@ -28,15 +28,15 @@ public class AppointmentExistenceValidator implements ConstraintValidator<Appoin
     @Override
     public boolean isValid(Object value, javax.validation.ConstraintValidatorContext context) {
         try {
-            Field doctorIdField = value.getClass().getDeclaredField(doctorIdFieldName);
+            Field userIdField = value.getClass().getDeclaredField(userIdFieldName);
             Field dateField = value.getClass().getDeclaredField(dateFieldName);
             Field startTimeField = value.getClass().getDeclaredField(startTimeFieldName);
 
-            doctorIdField.setAccessible(true);
+            userIdField.setAccessible(true);
             dateField.setAccessible(true);
             startTimeField.setAccessible(true);
 
-            long doctorId = (long) doctorIdField.get(value);
+            long userId = (long) userIdField.get(value);
             LocalDate date = (LocalDate) dateField.get(value);
             Integer startTime = (Integer) startTimeField.get(value);
 
@@ -44,16 +44,15 @@ public class AppointmentExistenceValidator implements ConstraintValidator<Appoin
                 return true; // If date or start time is null, skip validation
             }
 
-            List<Appointment> appointments = as.getAppointmentByUserAndDate(doctorId, date, startTime);
+            List<Appointment> appointments = as.getAppointmentByUserAndDate(userId, date, startTime);
 
 
             if (appointments.isEmpty()) {
                 return true;
             }
 
-
             boolean isValid = appointments.size() == 1 &&
-                    !appointments.get(0).getStatus().equals(AppointmentStatus.CONFIRMADO.getValue());
+                    !appointments.getFirst().getStatus().equals(AppointmentStatus.CONFIRMADO.getValue());
 
             if (!isValid) {
                 context.disableDefaultConstraintViolation();
